J-0042 Fix scrollbar display

--- a/WebClient/src/styles.scss
+++ b/WebClient/src/styles.scss
@@ -6,7 +6,7 @@ html, body {
   margin: 0;
 
   div.v-scroll{
-    overflow-y: auto;
+    overflow-y: overlay;
 
     &::-webkit-scrollbar {
         width: $scrollbar-width;
